{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Camera",
            "id": "03712675-93a3-44da-afa4-625ac0f380c3",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "75a9a75f-b236-4a29-8d07-54c2c3472f77",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2,StickDeadzone(min=0.3)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8e9455d-79c5-47e6-910e-44c49df7440d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4da808e0-e8bc-4ddb-8e98-7c60519f0c15",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "33f6efba-564f-46b0-ba09-7250d4c3450b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5ffdc2ea-3e6c-4dd2-93a4-d9dfa4b2fba4",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack_Light",
                    "type": "Button",
                    "id": "457d3de2-5ef2-4de0-a5c7-0e36f065d72d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack_Heavy",
                    "type": "Button",
                    "id": "8090475b-29a0-4a5c-adeb-dce41a9f8e96",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)",
                    "initialStateCheck": false
                },
                {
                    "name": "DodgeRoll",
                    "type": "Button",
                    "id": "262cb634-ad8c-41c1-bd44-3d1150f92866",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "15c9997f-018c-4be2-9258-a58b755beff0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae63970e-4338-4d01-998b-a83c1abea74e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c4d53de-b261-44aa-b3a7-253a8aa31a60",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack_Light",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f07a7d77-332b-4a14-b6aa-d299293106d3",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54f4cc2d-d5e6-45dc-bba2-c002d4bf4b18",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51068c95-cd83-4335-a3bc-69d912fdb2e5",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack_Heavy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}